# Patient-Management-System

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint.sh  patient.rest  requirements.txt  schema.yml
app/cf/: asgi.py  settings.py  urls.py  wsgi.py
app/patients/: filters.py  models.py  serializers.py  urls.py  views.py
app/patients/management/commands/: seed_patient_records.py
app/patients/migrations/: 0001_initial.py  0002_alter_patientrecord_middle_name.py
paitent-crud-ui/: index.html  package-lock.json  package.json
paitent-crud-ui/src/: App.tsx
paitent-crud-ui/src/api/: http.ts  patients.controller.ts
